--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,43 +1,66 @@
-user  nginx;
-worker_processes  auto;
+server {
+    listen 80;
+    server_name ai.marmelli.com;
 
-events {
-    worker_connections  1024;
+    # ACME HTTP-01
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Allow only API and health endpoints; block admin and root UI
+    location /api/ {
+        proxy_pass http://app:8080/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization "";
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+    }
+
+    location = /api/v1/health {
+        proxy_pass http://app:8080/api/v1/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization "";
+    }
+
+    # Everything else: force HTTPS or deny if no cert yet
+    return 301 https://$host$request_uri;
 }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-    access_log /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log;
+server {
+    listen 443 ssl http2;
+    server_name ai.marmelli.com;
 
-    server {
-        listen 80 default_server;
-        server_name _;
+    ssl_certificate /etc/letsencrypt/live/ai.marmelli.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ai.marmelli.com/privkey.pem;
 
-        # Allow only API and health endpoints; block admin and root UI
-        location /api/ {
-            proxy_pass http://app:8080/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-        }
-
-        location = /api/v1/health {
-            proxy_pass http://app:8080/api/v1/health;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Default: deny everything else (including admin and static)
-        location / { return 403; }
+    # Allow only API and health endpoints; block admin and root UI
+    location /api/ {
+        proxy_pass http://app:8080/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization "";
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
+
+    location = /api/v1/health {
+        proxy_pass http://app:8080/api/v1/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization "";
+    }
+
+    # Default: deny everything else (including admin and static)
+    location / { return 403; }
 }
 
