--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     # Allow only API and health endpoints; block admin and root UI
-    location /api/ {
+    location /ollamapi/ {
         proxy_pass http://app:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -19,7 +19,7 @@ server {
         proxy_set_header Connection "";
     }
 
-    location = /api/v1/health {
+    location = /ollamapi/v1/health {
         proxy_pass http://app:8080/api/v1/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -40,7 +40,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/ai.marmelli.com/privkey.pem;
 
     # Allow only API and health endpoints; block admin and root UI
-    location /api/ {
+    location /ollamapi/ {
         proxy_pass http://app:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -51,7 +51,7 @@ server {
         proxy_set_header Connection "";
     }
 
-    location = /api/v1/health {
+    location = /ollamapi/v1/health {
         proxy_pass http://app:8080/api/v1/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -61,6 +61,18 @@ server {
     }
 
     # Default: deny everything else (including admin and static)
-    location / { return 403; }
+    location / {
+        proxy_pass http://openwebui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        client_max_body_size 20M;
+        proxy_read_timeout 10m;
+    }
 }
 
