--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=login_zone:10m rate=5r/m;
+
 server {
     listen 80;
     server_name ai.marmelli.com;
@@ -25,6 +27,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+
 
     # Everything else: force HTTPS or deny if no cert yet
     return 301 https://$host$request_uri;
@@ -54,6 +58,54 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Open OpenWebUI API
+    location ^~ /api/ {
+        proxy_pass http://openwebui:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        client_max_body_size 20M;
+        proxy_read_timeout 10m;
+    }
+
+    # Rate-limit login endpoints to mitigate brute-force
+    location = /login {
+        limit_req zone=login_zone burst=10 nodelay;
+        limit_req_status 429;
+        proxy_pass http://openwebui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        client_max_body_size 20M;
+        proxy_read_timeout 10m;
+    }
+
+    location ^~ /auth/ {
+        limit_req zone=login_zone burst=10 nodelay;
+        limit_req_status 429;
+        proxy_pass http://openwebui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        client_max_body_size 20M;
+        proxy_read_timeout 10m;
     }
 
     # Default: deny everything else (including admin and static)
