--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,22 @@
 limit_req_zone $binary_remote_addr zone=login_zone:10m rate=5r/m;
 
+map $http_origin $is_same_origin {
+    default 0;
+    "~^https?://ai\\.marmelli\\.com$" 1;
+}
+
+map $http_referer $has_valid_referer {
+    default 0;
+    "~^https?://ai\\.marmelli\\.com/" 1;
+}
+
+map "$is_same_origin$has_valid_referer" $allow_ui_api {
+    default 0;
+    "10" 1;
+    "01" 1;
+    "11" 1;
+}
+
 server {
     listen 80;
     server_name ai.marmelli.com;
@@ -60,9 +77,24 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Open OpenWebUI API
+    # OpenWebUI API
     location ^~ /api/ {
         proxy_pass http://openwebui:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_buffering off;
+        client_max_body_size 20M;
+        proxy_read_timeout 10m;
+    }
+
+    # Public Ollama passthrough exposed by OpenWebUI
+    location ^~ /ollama/ {
+        proxy_pass http://openwebui:8080/ollama/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
