--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,7 +79,7 @@ server {
 
     # OpenWebUI API
     location ^~ /api/ {
-        proxy_pass http://openwebui:8080;
+        proxy_pass http://host.docker.internal:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -94,7 +94,7 @@ server {
 
     # Public Ollama passthrough exposed by OpenWebUI
     location ^~ /ollama/ {
-        proxy_pass http://openwebui:8080/ollama/;
+        proxy_pass http://host.docker.internal:8080/ollama/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -111,7 +111,7 @@ server {
     location = /login {
         limit_req zone=login_zone burst=10 nodelay;
         limit_req_status 429;
-        proxy_pass http://openwebui:8080/;
+        proxy_pass http://host.docker.internal:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -127,7 +127,7 @@ server {
     location ^~ /auth/ {
         limit_req zone=login_zone burst=10 nodelay;
         limit_req_status 429;
-        proxy_pass http://openwebui:8080/;
+        proxy_pass http://host.docker.internal:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -142,7 +142,7 @@ server {
 
     # Default: deny everything else (including admin and static)
     location / {
-        proxy_pass http://openwebui:8080/;
+        proxy_pass http://host.docker.internal:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
